feat(dataStroage): Add subpath mount option
Signed-off-by: Adrian Nöthlich <git@promasu.tech>

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -48,6 +48,9 @@ spec:
           volumeMounts:
             - name: {{ .Values.dataStorage.volumeName }}
               mountPath: /data
+              {{- if .Values.dataStorage.subPath }}
+              subPath: {{ .Values.dataStorage.subPath }}
+              {{- end }}
             - name: scripts
               mountPath: /scripts
             {{- if .Values.valkeyConfig }}
