fix: use bash instead of sh in init script
Signed-off-by: Vegard Valvik <vegard.valvik@gmail.com>

--- a/valkey/templates/init_config.yaml
+++ b/valkey/templates/init_config.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "valkey.labels" . | nindent 4 }}
 data:
   init.sh: |-
-    #!/bin/sh
+    #!/bin/bash
     set -euo pipefail
 
     # Default config paths
