--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -8,10 +8,10 @@ global:
 replicaCount: 1
 
 image:
-  # image registry
-  registry: ""
-  # Valkey Docker image to use
-  repository: docker.io/valkey/valkey
+  # Image registry
+  registry: "docker.io"
+  # Image repository
+  repository: valkey/valkey
   # Image pull policy (Always, IfNotPresent, Never)
   pullPolicy: IfNotPresent
   # Image tag (leave empty to use .Chart.AppVersion)
