feat: add commonLabels support to add labels to all resources
Signed-off-by: Gagan H R <hrgagan4@gmail.com>

--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -30,6 +30,9 @@ serviceAccount:
 podAnnotations: {}
 podLabels: {}
 
+# Common labels to add to all resources (Deployment, Service, ConfigMap, etc.)
+commonLabels: {}
+
 # Security context for the pod (applies to all containers)
 podSecurityContext:
   fsGroup: 1000
