--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -59,6 +59,8 @@ service:
   annotations: {}
   # NodePort value (if service.type is NodePort)
   nodePort: 0
+  # ClusterIP value
+  clusterIP: ""
 
 # Network policy to control traffic to the pods
 # More info: https://kubernetes.io/docs/concepts/services-networking/network-policies/
