--- a/valkey/templates/init_config.yaml
+++ b/valkey/templates/init_config.yaml
@@ -58,22 +58,70 @@ data:
     } >>"$VALKEY_CONFIG"
 
     {{- if .Values.auth.enabled }}
-    echo "aclfile /data/conf/users.acl" >>"$VALKEY_CONFIG"
-    {{- if or .Values.auth.generateDefaultUser.enabled .Values.auth.existingSecret }}
-    # Copy ACL from mounted secret
-    if [ -f /valkey-auth/users.acl ]; then
-      log "Using ACL configuration from secret"
-      cp /valkey-auth/users.acl /data/conf/users.acl
+    # Create secure directory for ACL file
+    log "Creating /etc/valkey directory for ACL file"
+    mkdir -p /etc/valkey
+
+    # Set aclfile path in valkey.conf
+    echo "aclfile /etc/valkey/users.acl" >>"$VALKEY_CONFIG"
+
+    # Create ACL file with secure permissions
+    log "Generating ACL file at /etc/valkey/users.acl"
+    touch /etc/valkey/users.acl
+
+    {{- if .Values.auth.aclUsers }}
+    # Generate ACL entries for each user
+    log "Generating ACL entries for users"
+    {{- range .Values.auth.aclUsers }}
+    {{- $username := .name }}
+    {{- $passwordKey := .passwordKey | default .name }}
+
+    # User: {{ $username }}
+    PASSWORD=""
+    {{- if $.Values.auth.usersExistingSecret }}
+    # Try to get password from existing secret first (priority)
+    if [ -f /valkey-users-secret/{{ $passwordKey }} ]; then
+      PASSWORD=$(cat /valkey-users-secret/{{ $passwordKey }})
+      log "Using password from existing secret for user {{ $username }}"
+    {{- if .password }}
+    elif [ -f /valkey-auth-secret/{{ $username }}-password ]; then
+      # Fallback to inline password
+      PASSWORD=$(cat /valkey-auth-secret/{{ $username }}-password)
+      log "Using inline password for user {{ $username }}"
+    {{- end }}
     else
-      log "ERROR: auth.enabled is true but no ACL file found in secret"
+      log "ERROR: No password found for user {{ $username }}"
       exit 1
     fi
-    {{- else }}
-    # Use inline ACL configuration
-    cat <<EOF > /data/conf/users.acl
-{{ .Values.auth.aclConfig | indent 6 }}
-    EOF
+    {{- else if .password }}
+    # Use inline password only
+    if [ -f /valkey-auth-secret/{{ $username }}-password ]; then
+      PASSWORD=$(cat /valkey-auth-secret/{{ $username }}-password)
+      log "Using inline password for user {{ $username }}"
+    else
+      log "ERROR: No password found for user {{ $username }}"
+      exit 1
+    fi
     {{- end }}
+
+    # Hash the password and write ACL entry
+    PASSHASH=$(echo -n "$PASSWORD" | sha256sum | cut -f 1 -d " ")
+    echo "user {{ $username }} on #$PASSHASH {{ .permissions }}" >> /etc/valkey/users.acl
+
+    {{- end }}
+    {{- end }}
+
+    {{- if .Values.auth.aclConfig }}
+    # Append inline ACL configuration
+    log "Appending custom ACL configuration"
+    if [ -f /valkey-auth-secret/aclConfig ]; then
+      cat /valkey-auth-secret/aclConfig >> /etc/valkey/users.acl
+    fi
+    {{- end }}
+
+    # Set final permissions
+    chmod 0400 /etc/valkey/users.acl
+    log "ACL file created with 0400 permissions"
     {{- end }}
 
     # Append extra configs if present
