--- a/valkey/templates/secret.yaml
+++ b/valkey/templates/secret.yaml
@@ -8,9 +8,9 @@ metadata:
     {{- include "valkey.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- range .Values.auth.aclUsers }}
-    {{- if .password }}
-  {{ .name }}-password: {{ .password | b64enc }}
+  {{- range $username, $user := .Values.auth.aclUsers }}
+    {{- if $user.password }}
+  {{ $username }}-password: {{ $user.password | b64enc }}
     {{- end }}
   {{- end }}
   {{- if .Values.auth.aclConfig }}
