--- a/valkey/tests/secret_test.yaml
+++ b/valkey/tests/secret_test.yaml
@@ -14,7 +14,7 @@ tests:
       auth.enabled: true
       auth.usersExistingSecret: "my-secret"
       auth.aclUsers:
-        - name: "admin"
+        admin:
           permissions: "~* &* +@all"
       auth.aclConfig: ""
     asserts:
@@ -43,10 +43,10 @@ tests:
     set:
       auth.enabled: true
       auth.aclUsers:
-        - name: "admin"
+        admin:
           permissions: "~* &* +@all"
           password: "admin-password"
-        - name: "readonly"
+        readonly:
           permissions: "~* +@read"
           password: "readonly-password"
     asserts:
@@ -69,7 +69,7 @@ tests:
     set:
       auth.enabled: true
       auth.aclUsers:
-        - name: "testuser"
+        testuser:
           permissions: "~* &* +@all"
           password: "mypassword"
     asserts:
@@ -83,7 +83,7 @@ tests:
     set:
       auth.enabled: true
       auth.aclUsers:
-        - name: "admin"
+        admin:
           permissions: "~* &* +@all"
           password: "admin-password"
       auth.aclConfig: "user guest on nopass ~public:* +@read"
@@ -102,10 +102,10 @@ tests:
       auth.enabled: true
       auth.usersExistingSecret: "my-secret"
       auth.aclUsers:
-        - name: "admin"
+        admin:
           permissions: "~* &* +@all"
           password: "admin-password"
-        - name: "readonly"
+        readonly:
           permissions: "~* +@read"
     asserts:
       - hasDocuments:
@@ -121,7 +121,7 @@ tests:
     set:
       auth.enabled: true
       auth.aclUsers:
-        - name: "admin"
+        admin:
           permissions: "~* &* +@all"
           password: "admin-password"
     asserts:
