--- a/valkey/templates/tests/auth.yaml
+++ b/valkey/templates/tests/auth.yaml
@@ -1,15 +1,13 @@
 {{- if .Values.auth.enabled }}
-{{- $firstUser := dict }}
+{{- if include "valkey.hasInlinePasswords" . | eq "true" }}
 {{- $firstUsername := "" }}
 {{- range $username, $user := .Values.auth.aclUsers }}
   {{- if $user.password }}
     {{- if not $firstUsername }}
       {{- $firstUsername = $username }}
-      {{- $firstUser = $user }}
     {{- end }}
   {{- end }}
 {{- end }}
-{{- if include "valkey.hasInlinePasswords" . | eq "true" }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -29,18 +27,30 @@ spec:
         - -c
         - |
           set -e
-          echo "Testing authentication with aclUsers (inline passwords)..."
+          echo "Testing authentication with user {{ $firstUsername }} (inline passwords)..."
 
           # Extract password from secret
           PASSWORD=$(cat /valkey-auth/{{ $firstUsername }}-password)
           USERNAME="{{ $firstUsername }}"
 
+          {{- if .Values.tls.enabled }}
+          # TLS flags
+          TLS_FLAGS="--tls --cacert /tls/{{ .Values.tls.caPublicKey }}"
+          {{- else }}
+          TLS_FLAGS=""
+          {{- end }}
+
           # Test authentication
-          valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} --user "$USERNAME" --pass "$PASSWORD" PING
+          PING_RESULT=$(valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} $TLS_FLAGS --user "$USERNAME" --pass "$PASSWORD" PING)
+          if [ "$PING_RESULT" != "PONG" ]; then
+            echo "✗ Authentication test failed: expected 'PONG', got '$PING_RESULT'"
+            exit 1
+          fi
+          echo "✓ PING successful: $PING_RESULT"
 
           # Test that we can set and get a value (if permissions allow)
-          if valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} --user "$USERNAME" --pass "$PASSWORD" SET test-key-generated "test-value" 2>/dev/null; then
-            VALUE=$(valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} --user "$USERNAME" --pass "$PASSWORD" GET test-key-generated)
+          if valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} $TLS_FLAGS --user "$USERNAME" --pass "$PASSWORD" SET test-key-generated "test-value" 2>/dev/null; then
+            VALUE=$(valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} $TLS_FLAGS --user "$USERNAME" --pass "$PASSWORD" GET test-key-generated)
             if [ "$VALUE" = "test-value" ]; then
               echo "✓ Authentication test passed with write permissions"
               exit 0
@@ -56,10 +66,20 @@ spec:
         - name: valkey-auth
           mountPath: /valkey-auth
           readOnly: true
+        {{- if .Values.tls.enabled }}
+        - name: valkey-tls
+          mountPath: /tls
+          readOnly: true
+        {{- end }}
   volumes:
     - name: valkey-auth
       secret:
         secretName: {{ include "valkey.fullname" . }}-auth
+    {{- if .Values.tls.enabled }}
+    - name: valkey-tls
+      secret:
+        secretName: {{ .Values.tls.existingSecret }}
+    {{- end }}
 {{- end }}
 {{- end }}
 ---
@@ -85,21 +105,40 @@ spec:
           set -e
           echo "Testing authentication with usersExistingSecret..."
 
+          {{- if .Values.tls.enabled }}
+          # TLS flags
+          TLS_FLAGS="--tls --cacert /tls/{{ .Values.tls.caPublicKey }}"
+          {{- else }}
+          TLS_FLAGS=""
+          {{- end }}
+
           # Test basic connection (no auth - will fail if auth is properly configured)
-          if valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} PING 2>/dev/null; then
+          PING_RESULT=$(valkey-cli -h {{ include "valkey.fullname" . }} -p {{ .Values.service.port }} $TLS_FLAGS PING 2>&1 || true)
+          if [ "$PING_RESULT" = "PONG" ]; then
             echo "✗ Authentication test failed: server allows unauthenticated access"
             exit 1
           fi
 
           echo "✓ Authentication is enforced (unauthenticated access denied)"
+          echo "✓ Received expected error: $PING_RESULT"
           echo "⚠ Manual verification recommended for usersExistingSecret configuration"
           exit 0
       volumeMounts:
         - name: valkey-users-secret
           mountPath: /valkey-users-secret
           readOnly: true
+        {{- if .Values.tls.enabled }}
+        - name: valkey-tls
+          mountPath: /tls
+          readOnly: true
+        {{- end }}
   volumes:
     - name: valkey-users-secret
       secret:
         secretName: {{ .Values.auth.usersExistingSecret }}
+    {{- if .Values.tls.enabled }}
+    - name: valkey-tls
+      secret:
+        secretName: {{ .Values.tls.existingSecret }}
+    {{- end }}
 {{- end }}
