--- a/valkey/templates/init_config.yaml
+++ b/valkey/templates/init_config.yaml
@@ -15,10 +15,47 @@ data:
     LOGFILE="/data/init.log"
     DATA_DIR="/data/conf"
 
-    # Logging function
+    # Logging function (outputs to stderr and file)
     log() {
-      echo "$(date) $1" | tee -a "$LOGFILE"
+      echo "$(date) $1" | tee -a "$LOGFILE" >&2
     }
+
+    {{- if .Values.auth.enabled }}
+    # Function to get password for a user
+    # Usage: get_user_password <username> [password_key]
+    # Returns: password via stdout, exits with error if not found
+    get_user_password() {
+      local username="$1"
+      local password_key="${2:-$username}"
+      local password=""
+
+      {{- if .Values.auth.usersExistingSecret }}
+      # Try to get password from existing secret first (priority)
+      if [ -f "/valkey-users-secret/$password_key" ]; then
+        password=$(cat "/valkey-users-secret/$password_key")
+        log "Using password from existing secret for user $username"
+      elif [ -f "/valkey-auth-secret/${username}-password" ]; then
+        # Fallback to inline password
+        password=$(cat "/valkey-auth-secret/${username}-password")
+        log "Using inline password for user $username"
+      else
+        log "ERROR: No password found for user $username"
+        return 1
+      fi
+      {{- else }}
+      # Use inline password only
+      if [ -f "/valkey-auth-secret/${username}-password" ]; then
+        password=$(cat "/valkey-auth-secret/${username}-password")
+        log "Using inline password for user $username"
+      else
+        log "ERROR: No password found for user $username"
+        return 1
+      fi
+      {{- end }}
+
+      echo "$password"
+    }
+    {{- end }}
 
     # Clean old log if requested
     if [ "${KEEP_OLD_LOGS:-false}" != "true" ]; then
@@ -76,32 +113,7 @@ data:
     {{- $passwordKey := $user.passwordKey | default $username }}
 
     # User: {{ $username }}
-    PASSWORD=""
-    {{- if $.Values.auth.usersExistingSecret }}
-    # Try to get password from existing secret first (priority)
-    if [ -f /valkey-users-secret/{{ $passwordKey }} ]; then
-      PASSWORD=$(cat /valkey-users-secret/{{ $passwordKey }})
-      log "Using password from existing secret for user {{ $username }}"
-    {{- if $user.password }}
-    elif [ -f /valkey-auth-secret/{{ $username }}-password ]; then
-      # Fallback to inline password
-      PASSWORD=$(cat /valkey-auth-secret/{{ $username }}-password)
-      log "Using inline password for user {{ $username }}"
-    {{- end }}
-    else
-      log "ERROR: No password found for user {{ $username }}"
-      exit 1
-    fi
-    {{- else if $user.password }}
-    # Use inline password only
-    if [ -f /valkey-auth-secret/{{ $username }}-password ]; then
-      PASSWORD=$(cat /valkey-auth-secret/{{ $username }}-password)
-      log "Using inline password for user {{ $username }}"
-    else
-      log "ERROR: No password found for user {{ $username }}"
-      exit 1
-    fi
-    {{- end }}
+    PASSWORD=$(get_user_password "{{ $username }}" "{{ $passwordKey }}") || exit 1
 
     # Hash the password and write ACL entry
     PASSHASH=$(echo -n "$PASSWORD" | sha256sum | cut -f 1 -d " ")
@@ -121,6 +133,80 @@ data:
     # Set final permissions
     chmod 0400 /etc/valkey/users.acl
     log "ACL file created with 0400 permissions"
+    {{- end }}
+
+    {{- if .Values.replica.enabled }}
+    # Replica mode configuration
+    log "Configuring replication mode"
+
+    # Use POD_INDEX from Kubernetes metadata
+    POD_INDEX=${POD_INDEX:-0}
+    IS_MASTER=false
+
+    # Check if this is pod-0 (master)
+    if [ "$POD_INDEX" = "0" ]; then
+      IS_MASTER=true
+      log "This pod (index $POD_INDEX) is configured as MASTER"
+    else
+      log "This pod (index $POD_INDEX) is configured as REPLICA"
+    fi
+
+    # Configure replica settings
+    if [ "$IS_MASTER" = "false" ]; then
+      MASTER_HOST="{{ include "valkey.fullname" . }}-0.{{ include "valkey.fullname" . }}-headless"
+      MASTER_PORT="{{ .Values.service.port }}"
+
+      log "Configuring replica to follow master at $MASTER_HOST:$MASTER_PORT"
+
+      {
+        echo ""
+        echo "# Replica Configuration"
+        echo "replicaof $MASTER_HOST $MASTER_PORT"
+        echo "replica-read-only yes"
+        {{- if .Values.replica.disklessSync }}
+        echo ""
+        echo "# Diskless replication"
+        echo "repl-diskless-sync yes"
+        echo "repl-diskless-sync-delay 5"
+        {{- end }}
+        {{- if .Values.auth.enabled }}
+        echo ""
+        echo "# Master authentication"
+        {{- end }}
+      } >>"$VALKEY_CONFIG"
+
+      {{- if .Values.auth.enabled }}
+      # Get the password for the replication user
+      {{- $replUsername := .Values.replica.replicationUser }}
+      REPL_PASSWORD=$(get_user_password "{{ $replUsername }}") || exit 1
+
+      # Write masterauth configuration
+      echo "masterauth $REPL_PASSWORD" >>"$VALKEY_CONFIG"
+      echo "masteruser {{ $replUsername }}" >>"$VALKEY_CONFIG"
+      log "Configured masterauth with user {{ $replUsername }}"
+      {{- end }}
+
+      {{- if .Values.tls.enabled }}
+      # TLS for replication
+      {
+        echo ""
+        echo "# TLS for replication"
+        echo "tls-replication yes"
+      } >>"$VALKEY_CONFIG"
+      log "Enabled TLS for replication"
+      {{- end }}
+    fi
+
+    {{- if gt (int .Values.replica.minReplicasToWrite) 0 }}
+    # Write safety - require minimum healthy replicas
+    {
+      echo ""
+      echo "# Minimum replicas for write operations"
+      echo "min-replicas-to-write {{ .Values.replica.minReplicasToWrite }}"
+      echo "min-replicas-max-lag {{ .Values.replica.minReplicasMaxLag }}"
+    } >>"$VALKEY_CONFIG"
+    log "Configured write safety: require {{ .Values.replica.minReplicasToWrite }} replicas with max {{ .Values.replica.minReplicasMaxLag }}s lag"
+    {{- end }}
     {{- end }}
 
     # Append extra configs if present
