Update README, add missing schema entries
Signed-off-by: Silvio Gissi <silvio@gissilabs.com>

--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -254,7 +254,7 @@ tolerations: []
 affinity: {}
 
 # Set Deployment strategy. See https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
-deploymentStrategy: RollingUpdate
+deploymentStrategy: RollingUpdate # @schema enum:[RollingUpdate,Recreate]
 
 # See https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints
 topologySpreadConstraints: []
