Apply loadBalancerClass to replica service
Signed-off-by: Silvio Gissi <silvio@gissilabs.com>

--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -219,6 +219,8 @@ replica:
     clusterIP: ""
     # Application protocol
     appProtocol: ""
+    # Class of a load balancer implementation
+    loadBalancerClass: ""
 
   # Persistence configuration (required for replicas)
   persistence:
