--- a/valkey/templates/service-read.yaml
+++ b/valkey/templates/service-read.yaml
@@ -15,6 +15,9 @@ spec:
   {{- if .Values.replica.service.clusterIP }}
   clusterIP: {{ .Values.replica.service.clusterIP }}
   {{- end }}
+  {{- if .Values.replica.service.loadBalancerClass }}
+  loadBalancerClass: {{ .Values.replica.service.loadBalancerClass }}
+  {{- end }}
   ports:
     - name: tcp
       port: {{ .Values.replica.service.port }}
