Fix Replica service typo and missing anchor on NOTES
Signed-off-by: Silvio Gissi <silvio@gissilabs.com>

--- a/valkey/templates/service-read.yaml
+++ b/valkey/templates/service-read.yaml
@@ -26,8 +26,8 @@ spec:
       {{- if and (eq .Values.replica.service.type "NodePort") .Values.replica.service.nodePort }}
       nodePort: {{ .Values.replica.service.nodePort }}
       {{- end }}
-      {{- if .Values.service.replica.appProtocol }}
-      appProtocol: {{ .Values.service.replica.appProtocol }}
+      {{- if .Values.replica.service.appProtocol }}
+      appProtocol: {{ .Values.replica.service.appProtocol }}
       {{- end }}
   selector:
     {{- include "valkey.selectorLabels" . | nindent 4 }}
